<resources>
    <string name="app_name">Heart Rate Game</string>
    <string name="levels_title">Levels</string>
    <string name="login">Login</string>
    <string name="start_game_button_label">Start!</string>
    <string name="select_time_title">Set Time</string>
    <string name="minute_label">min</string>
    <string name="second_label">sec</string>
    <string name="quit_game_button_label">Quit</string>
    <string name="remaining_time_label">TIME LEFT</string>
    <string name="heartrate_value_label">YOUR HEARTRATE</string>
    <string name="bpm_label">BPM</string>
    <string name="back_button">Back Button</string>
    <string name="results_title">Results</string>
    <string name="add_custom_level_title">Add Custom Level</string>
    <string name="level_failed">Level Failed</string>
    <string name="back">Back</string>
    <string name="keep_moving">⚠ KEEP MOVING! ⚠</string>
    <string name="blank_hr">-</string>
    <string name="blank_min">MIN: -</string>
    <string name="blank_max">MAX: -</string>
    <string name="blank_avg">AVG: -</string>
    <string name="new_best_score">NEW BEST SCORE!</string>
    <string name="best_score">Best Score: </string>
    <string name="your_score">Your Score:</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="friends">Friends</string>
    <string name="create">Create</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="outgoing_requests">OUTGOING REQUESTS</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="profile">Profile</string>
    <string name="best_scores">BEST SCORES</string>
</resources>