<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FriendProfileFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="@color/black"
            android:elevation="5dp">
            <ImageButton
                android:id="@+id/back_button"
                android:src="@drawable/ic_baseline_arrow_left_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <include
            android:id="@+id/profile_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            layout="@layout/friend_row"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:textColor="@color/gray_600"
            android:textSize="15sp"
            android:text="@string/best_scores"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scores_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="53"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>