<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:elevation="5dp">
            <ImageButton
                android:id="@+id/back_button"
                android:src="@drawable/ic_baseline_arrow_left_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
            <ImageButton
                android:id="@+id/user_image_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintDimensionRatio="1:1"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                android:scaleType="fitXY"
                />
            <ProgressBar
                android:id="@+id/loading_wheel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:indeterminateTint="@color/pink_600"
                android:visibility="invisible"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="9dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:padding="1dp"
                android:elevation="5dp">
                <EditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:background="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="9dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:padding="1dp"
                android:elevation="5dp">
                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:background="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:inputType="textPassword"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">
            <TextView
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_600"
                android:text="@string/sign_in"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">
            <TextView
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_600"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</layout>