<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".GameFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pink_600">
        <TextView
            android:id="@+id/activity_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:text="Activity Name"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
            <ImageView
                android:id="@+id/activity_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintDimensionRatio="1:1"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom|center_horizontal"
            android:text="@string/remaining_time_label"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/time_left_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom|center_horizontal"
            android:text="@string/heartrate_value_label"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/bpm_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bpm_label"
                android:textColor="@color/white"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">
            <TextView
                android:id="@+id/quit_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:text="@string/quit_game_button_label"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
</layout>