<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:elevation="5dp">
            <ImageButton
                android:id="@+id/back_button"
                android:src="@drawable/ic_baseline_arrow_left_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/account"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25sp"/>
            <ImageButton
                android:id="@+id/friends_button"
                android:src="@drawable/ic_baseline_people_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/login"
                android:scaleType="fitXY"
                android:padding="10dp"
                android:background="@android:color/transparent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Welcome, User!"
            android:textColor="@color/black"
            android:textSize="25sp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
            <ImageView
                android:id="@+id/user_image_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintDimensionRatio="1:1"
                android:scaleType="fitXY"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">
            <TextView
                android:id="@+id/sign_out_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_600"
                android:text="@string/sign_out"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
</layout>