<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddFriendFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:elevation="5dp">
            <ImageButton
                android:id="@+id/back_button"
                android:src="@drawable/ic_baseline_arrow_left_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:padding="10dp"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Add Friend"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="9dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:padding="1dp"
                android:elevation="5dp">
                <EditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:background="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">
            <TextView
                android:id="@+id/send_request_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pink_600"
                android:text="@string/send_friend_request"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:elevation="5dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/pending_requests"
            android:textColor="@color/gray_600"
            android:textSize="15sp"
            android:gravity="center"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pending_requests_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>